--- a/src/components/Terminal/Terminal.scss
+++ b/src/components/Terminal/Terminal.scss
@@ -1,8 +1,8 @@
 .Terminal {
     background: $color-seaweed;
     position: absolute;
-    width: 90%;
-    height: 90%;
+    width: 1000px;
+    height: 700px;
     border: 1px $color-turquoise-blue dashed;
     font-family: 'Inconsolata', monospace;
     color: $color-turquoise-blue;
